--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,14 +1,18 @@
 {
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "name": "Debug C file",
-            "type": "lldb",
-            "request": "launch",
-            "program": "${fileDirname}/${fileBasenameNoExtension}",
-            "args": [],
-            "cwd": "${fileDirname}",
-            "preLaunchTask": "Build C file"
-        }
-    ]
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "name": "Debug active file",
+      "type": "lldb",
+      "request": "launch",
+      "program": "${fileDirname}/${fileBasenameNoExtension}",
+      "args": [],
+      "cwd": "${fileDirname}",
+      "env": {
+        "DYLD_LIBRARY_PATH": "/usr/local/lib"
+      },
+      "preLaunchTask": "build active file",
+      "stopOnEntry": false
+    }
+  ]
 }
